--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="mongodb+srv://username:ktgtwxBdWzPt583G@cluster0.tvsws1n.mongodb.net/ipl-final-2023"
+DATABASE_URL="mongodb+srv://Aakash:Mango%40143@cluster0.lofyf.mongodb.net/ADBProject"
 SESSION_SECRET="mysecretkey"
 
